<resources>
    <string name="app_name">ArFinance</string>
    <string name="setting">setting</string>
    <string name="total_balance">Total Balance</string>
    <string name="total_income">Total Income of the week</string>
    <string name="total_expense">Total Expenses of the week</string>
    <string name="transactions">Transactions</string>
    <string name="title">title</string>
    <string name="income">Income</string>
    <string name="expense">Expense</string>
    <string name="cash">Cash</string>
    <string name="credit_card">Credit Card</string>
    <string name="transaction_type">Transaction Type</string>
    <string name="payment_type">Payment Type</string>
    <string name="amount">amount</string>
    <string name="date">date</string>
    <string name="category">category</string>
    <string name="note">note</string>
    <string name="save">Save</string>
    <string name="add">Add</string>
    <string name="add_category_desc">add category</string>
    <string name="category_title">Category title</string>
    <string name="category_type">Category Type</string>
    <string name="spending">Spending</string>
    <string name="profit">Profit</string>
    <string name="choose_category_icon">Choose Category Icon</string>
    <string name="select_icon">Select Icon</string>
    <string name="today">Today</string>
    <string name="week">Week</string>
    <string name="search">search</string>
    <string name="no_record">No Record</string>
    <string name="categories">Categories</string>
    <string name="analytics">Analytics</string>
    <string name="see_all_transactions">All Transactions</string>
    <string name="no_data_for_chart">No data for Chart</string>
    <string name="income_analytics">Income Analytics</string>
    <string name="expense_analytics">Expense Analytics</string>
    <string name="day">day</string>
    <string name="month">month</string>
    <string name="three_months">3 months</string>
    <string name="expense_by_category_analytics">Expense by category Analytics</string>
    <string name="appearance">Appearance</string>
    <string name="general">General</string>
    <string name="light">light</string>
    <string name="dark">Dark</string>
    <string name="system_default">System Default</string>
    <string name="english">English</string>
    <string name="persian">Persian</string>
    <string name="gregorian_calendar">Gregorian Calendar</string>
    <string name="solar_calendar">Solar Calender</string>

    <string name="theme_key">theme</string>
    <string name="language_key">language</string>
    <string name="color_key">color</string>
    <string name="add_transaction">Add Transaction</string>
    <string name="add_category">Add Category</string>
    <string name="app_theme">App Theme</string>
    <string name="language">Language</string>
    <string name="color">ColorAccent</string>

    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>

    <string name="orange">orange</string>
    <string name="blue">blue</string>
    <string name="green">green</string>
    <string name="yellow">yellow</string>
    <string name="purple">purple</string>

    <string-array name="Times">
        <item>Week</item>
        <item>1 Month</item>
        <item>3 Months</item>
    </string-array>
</resources>