<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/appearance"
        app:icon="@drawable/ic_appearance_24">


        <ListPreference
            app:key="theme"
            app:defaultValue="@string/system_default"
            app:entries="@array/theme_entries"
            app:entryValues="@array/theme_values"
            app:title="App Theme"
            />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/general"
        app:icon="@drawable/ic_settings_red">
        <ListPreference
            app:key="language"
            app:defaultValue="English"
            app:entries="@array/language_entries"
            app:entryValues="@array/language_values"
            app:title="Language"
            />

        <ListPreference
            app:key="calender"
            app:defaultValue="Gregorian Calendar"
            app:entries="@array/calender_entries"
            app:entryValues="@array/calender_values"
            app:title="Calender"
            />
    </PreferenceCategory>



</PreferenceScreen>