<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/TransactionListFragment">

    <fragment
        android:id="@+id/TransactionListFragment"
        android:name="com.example.arfinance.ui.home.TransactionListFragment"
        android:label="ArFinance"
        tools:layout="@layout/home_fragment">

        <action
            android:id="@+id/addEditTransaction"
            app:destination="@id/addEditTransactionFragment"
            app:popEnterAnim="@android:anim/fade_in"
            app:popExitAnim="@android:anim/fade_out" />
        <action
            android:id="@+id/navigateToAnalytics"
            app:destination="@id/analyticsFragment" />
        <action
            android:id="@+id/navigateToCategoriesList"
            app:destination="@id/selectCategoryFragment" />
        <action
            android:id="@+id/navigateToSetting"
            app:destination="@id/settingsFragment" />
        <action
            android:id="@+id/navigateToAllTransactionsList"
            app:destination="@id/allTransactionListFragment" />
    </fragment>
    <fragment
        android:id="@+id/addEditTransactionFragment"
        android:name="com.example.arfinance.ui.addEditTransaction.AddEditTransactionFragment"
        android:label="@string/add_transaction"
        tools:layout="@layout/add_edit_transaction_fragment">
        <argument
            android:name="transaction"
            android:defaultValue="@null"
            app:argType="com.example.arfinance.data.dataModel.Transactions"
            app:nullable="true" />
        <action
            android:id="@+id/selectCategory"
            app:destination="@id/selectCategoryFragment"
            app:popEnterAnim="@android:anim/fade_in"
            app:popExitAnim="@android:anim/fade_out" />
    </fragment>
    <fragment
        android:id="@+id/analyticsFragment"
        android:name="com.example.arfinance.ui.analytics.AnalyticsFragment"
        android:label="@string/analytics"
        tools:layout="@layout/analytics_fragment" />
    <fragment
        android:id="@+id/addCategoryFragment"
        android:name="com.example.arfinance.ui.addCategory.AddCategoryFragment"
        android:label="Add Category"
        tools:layout="@layout/add_category_fragment" />
    <fragment
        android:id="@+id/selectCategoryFragment"
        android:name="com.example.arfinance.ui.selectCategory.SelectCategoryFragment"
        android:label="@string/category"
        tools:layout="@layout/select_category_fragment">
        <action
            android:id="@+id/addCategory"
            app:destination="@id/addCategoryFragment"
            app:popEnterAnim="@android:anim/fade_in"
            app:popExitAnim="@android:anim/fade_out"/>
    </fragment>
    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.example.arfinance.ui.setting.SettingsFragment"
        android:label="@string/setting" />
    <fragment
        android:id="@+id/allTransactionListFragment"
        android:name="com.example.arfinance.ui.allTransactionList.AllTransactionListFragment"
        android:label="@string/see_all_transactions"
        tools:layout="@layout/fragment_all_transaction_list" />

</navigation>