<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/large_margin"
        app:cardCornerRadius="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/total_balance_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/txt_total_balance_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/standard_margin"
                android:padding="@dimen/standard_margin"
                android:text="@string/week"
                android:textColor="@color/gray500"
                android:textSize="@dimen/large_font"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txt_total_balance_week"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/standard_margin"
                android:padding="@dimen/standard_margin"
                android:text="@string/week"
                android:textColor="@color/gray500"
                android:textSize="@dimen/large_font"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txt_total_balance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/standard_margin"
                android:padding="@dimen/standard_margin"
                android:text="@string/total_balance"
                android:textColor="@color/gray500"
                android:textSize="@dimen/large_font"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/total_balance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/standard_margin"
                android:padding="@dimen/standard_margin"
                android:textColor="@color/black"
                android:textSize="@dimen/big_font"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txt_total_balance"
                android:text="@string/no_record" />

            <com.github.mikephil.charting.charts.PieChart
                android:id="@+id/pie_chart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="350dp"
                android:layout_margin="@dimen/standard_margin"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/total_balance"
                android:visibility="gone"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/no_data_for_pie_chart_txt"
                android:text="@string/no_data_for_chart"
                android:textColor="@color/colorAccent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/total_balance"
                android:layout_margin="@dimen/extra_margin"
                android:textSize="@dimen/extra_font"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCardView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/large_margin"
        app:cardCornerRadius="5dp"
        app:layout_constraintEnd_toEndOf="@id/guideline_center_vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialCardView">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/income_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txt_income"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/standard_margin"
                android:padding="@dimen/standard_margin"
                android:text="@string/total_income"
                android:textColor="@color/gray500"
                android:textSize="@dimen/large_font"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/income"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/standard_margin"
                android:layout_marginBottom="@dimen/standard_margin"
                android:padding="@dimen/standard_margin"
                android:textColor="@color/green"
                android:textSize="@dimen/extra_font"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txt_income"
                android:text="@string/no_record" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/large_margin"
        app:cardCornerRadius="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/guideline_center_vertical"
        app:layout_constraintTop_toBottomOf="@+id/materialCardView"
        >


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/expense_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txt_expense"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/standard_margin"
                android:padding="@dimen/standard_margin"
                android:text="@string/total_expense"
                android:textColor="@color/gray500"
                android:textSize="@dimen/large_font"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/expense"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/standard_margin"
                android:layout_marginBottom="@dimen/standard_margin"
                android:padding="@dimen/standard_margin"
                android:textColor="@color/red"
                android:textSize="@dimen/extra_font"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txt_expense"
                android:text="@string/no_record" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_center_vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"/>


</androidx.constraintlayout.widget.ConstraintLayout>